--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -23,6 +23,14 @@
 {% endblock %}
 {% block extra_css %}
     <link href="https://cdn.jsdelivr.net/npm/nouislider/dist/nouislider.css" rel="stylesheet">
+    <noscript>
+        <style type="text/css">
+            div#search-grid button#clear-date,
+            div#search-grid button#reset-filters {
+                display: none; 
+            }
+        </style>
+    </noscript>
 {% endblock %}
 {% block body_class %}template-homepage{% endblock %}
 
@@ -58,7 +66,7 @@
                 </button>
             </fieldset>
         </div>
-        <div uk-grid id="search-grid">
+        <div uk-grid class="uk-grid" id="search-grid">
             <div
                 class="uk-form uk-form-stacked uk-width-1-3"
                 id="search-filters"
