Use webpack to bundle JavaScript files

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -193,16 +193,7 @@
     </div>
 
     {% block javascript %}
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-      <script src="{% static 'js/vue-clipboard.min.js' %}"></script>
-      <script src="{% static 'js/selectize.js' %}"></script>
-      <script src="{% static 'js/project.js' %}"></script>
-      <script src="{% static 'js/vue-readux.js' %}"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.13.7/js/uikit.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.13.7/js/uikit-icons.min.js"></script>
-      <script src="https://kit.fontawesome.com/2ebfe61a88.js" crossorigin="anonymous"></script>
+      <script src="{% static 'js/main.js' %}"></script>
       {% if has_ga_tracking_id %}
         <!-- Google Analytics -->
         <script>
