--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -4,7 +4,9 @@
 {% load crispy_forms_tags %}
 
 {% block extra_css %}
-<link href="{{ mirador_url }}css/mirador-combined.css" rel="stylesheet">
+<!-- <link href="{{ mirador_url }}css/mirador-combined.css" rel="stylesheet">
+<link href="{% static 'css/ecds-annotator.min.css' %}" rel="stylesheet"> -->
+
 <style>
   #rx-nav {
     display: none;
@@ -387,7 +389,9 @@
 
 {% block viewer %}
 
-<div id="viewer" role="region"></div>
+<div class="rdx-viewer-container">
+  <div id="rdx-viewer" role="region"></div>
+</div>
 
 
 {% if page.pid is not None %}
@@ -403,68 +407,27 @@
 
 {% block extra_javascript %}
 
-<script src="{{ mirador_url}}mirador.js"></script>
-<script type="text/javascript">
-  $(function () {
-    Mirador({
-      "id": "viewer",
-      "mainMenuSettings" : {
-        'show' : false,
-        'buttons' : {
-          info: false,
-        }
-      },
-      "layout": "1x1",
-      "data": [
-        {
-          "manifestUri": "https://{{ request.META.HTTP_HOST }}/iiif/v2/{{ volume.pid }}/manifest", "location": "Emory University"
-        }
-      ],
-      'windowSettings': {
-        "overlay": true,
-        "canvasControls": {}
-      },
-      "windowObjects": [{
-        loadedManifest: "https://{{ request.META.HTTP_HOST }}/iiif/v2/{{ volume.pid }}/manifest",
-        annotationLayer: true,
-        annotationCreation: true,
-        annotationState: 'annoOncreateOn',
-        {% if "/page/all" not in request.get_full_path %}
-        canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ page.manifest.pid }}/canvas/{{ page.pid }}',
-        {% endif %}
-        displayLayout: false,
-        sidePanel: false,
-        bottomPanel: false,
-        {% if "/page/all" in request.get_full_path %}
-        canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ volume.pid }}/canvas/{{ volume.canvas_set.pid.first }}',
-        viewType: "ThumbnailsView"
-        {% endif %}
-      }],
-  {% if user.is_anonymous %}
-  "availableAnnotationDrawingTools": [],
-    "availableAnnotationStylePickers": [],
-      {% else %}
-        username: '{{user.get_username}}',
-        usernamePretty: '{{user.name}}',
-      {% endif %}
-      "annotationEndpoint": { "name":"Readux", "module": "ReaduxEndpoint" }
-    });
-  });
+<!-- <script src="{% static 'js/ecds-annotator.min.js' %}"></script> -->
 
-</script>
 <script type="text/javascript">
-  /* Add jQuery function `icontains` for case insensitive version of
-     jQuery's contains method.
-     https://stackoverflow.com/a/8747204/1792144
-     Usage `$( "span:icontains('woRd')")`
-     Add it after Mirador loads.
-     We can use this to highlight text when it is searched.
-  */
-  jQuery.expr[':'].icontains = function(a, i, m) {
-    return jQuery(a).text().toUpperCase()
-        .indexOf(m[3].toUpperCase()) >= 0;
+window.onload = function() {
+  const options = {
+    manifest: 'https://{{ request.META.HTTP_HOST }}/iiif/v3/{{ volume.pid }}/manifest',
+    id: 'rdx-viewer',
+    token: document.getElementsByName('csrfmiddlewaretoken')[0].value
   };
 
+  {% if not user.is_anonymouns %}
+    options.user = {
+      id: '{{user.get_username}}',
+      displayName: '{{user.name}}'
+    };
+  {% endif %}
+
+  ECDSAnnotator.init(options);
+}
+</script>
+<script type="text/javascript">
 
   {% if request.GET.q in request.get_full_path %}
     UIkit.offcanvas($('#offcanvas-usage')).show();
