Fix references to named javascript functons

--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -339,20 +339,20 @@ header#page-bg .collection-image-info p.credit {
   font-size: 0.9em;
 }
 
-header#page-bg .collection-image-info.collasped {
+header#page-bg .collection-image-info.collapsed {
   padding: 1.5em 1.75em;
   background-color: rgba(22, 22, 22, 0.33);
   opacity: 0.8;
   color: #dedede !important;
 }
 
-header#page-bg .collection-image-info.collasped:hover {
+header#page-bg .collection-image-info.collapsed:hover {
   opacity: 1;
   background-color: rgba(0, 0, 0, 0.62);
 }
 
-header#page-bg .collection-image-info.collasped h3,
-header#page-bg .collection-image-info.collasped .info {
+header#page-bg .collection-image-info.collapsed h3,
+header#page-bg .collection-image-info.collapsed .info {
   display: none;
 }
 
@@ -1921,20 +1921,20 @@ header#page-bg .collection-image-info p.credit {
   font-size: 0.9em;
 }
 
-header#page-bg .collection-image-info.collasped {
+header#page-bg .collection-image-info.collapsed {
   padding: 1.5em 1.75em;
   background-color: rgba(22, 22, 22, 0.33);
   opacity: 0.8;
   color: #dedede !important;
 }
 
-header#page-bg .collection-image-info.collasped:hover {
+header#page-bg .collection-image-info.collapsed:hover {
   opacity: 1;
   background-color: rgba(0, 0, 0, 0.62);
 }
 
-header#page-bg .collection-image-info.collasped h3,
-header#page-bg .collection-image-info.collasped .info {
+header#page-bg .collection-image-info.collapsed h3,
+header#page-bg .collection-image-info.collapsed .info {
   display: none;
 }
 
