--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -10,7 +10,7 @@
       <img src="/media/{{collection.header}}" alt="Header image for collection {{collection.label}}"
         style="width:100%;" />
     </div>
-    <div class="collection-image-info collasped"  tabindex="0" aria-label="about this collection" uk-tooltip="title: About this collection; pos: right">
+    <div class="collection-image-info collapsed"  tabindex="0" aria-label="about this collection" uk-tooltip="title: About this collection; pos: right">
       <div class="info">
         <p style="font-size:130%">{{ collection.collection_image_title }}</p>{% if collection.collection_image_summary %}
         <p>{{ collection.collection_image_summary }}</p> {% endif %}
