testing to have a javascript ocr color button

--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -3356,4 +3356,9 @@ ol#search-results dd.result-volume-summary {
   clip: rect(0,0,0,0);
   border: 0;
 }
+
+.ShowOCR {
+  color: black;
+  background-color: white; 
+}
 /*# sourceMappingURL=project.css.map */
