--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -311,6 +311,10 @@
             target="_blank">Export Citation in RIS</a>
         </div>
 
+       <div class="rx-info-content">
+       <button class="rx-action-btn" type="button" onclick="document.querySelector('div.openseadragon-canvas div span').classList.add('ShowOCR');">
+View/Hide OCR Overlay</button></div>
+
         <v-volume-export-annotation-btn :manifest-count="{{ user_annotation_count }}">
           <form action="{% url 'export' volume.pid %}" class="button_to" method="GET" id="rx-annotation-export-form">
             <a class="rx-action-btn" href="#" onclick="rxFormSubmit('rx-annotation-export-form');">Export
