highlighting and dehighlighting button

--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -3357,8 +3357,9 @@ ol#search-results dd.result-volume-summary {
   border: 0;
 }
 
-.ShowOCR {
-  color: black;
-  background-color: white; 
-}
+// .ShowOCR {
+//   color: red !important;
+//   font-weight: bold !important;
+//   background-color: white !important;
+// }
 /*# sourceMappingURL=project.css.map */
