--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -327,12 +327,12 @@
         <!--Text overlay modal-->
 
         <div class="rx-info-content">
-          <button class="rx-btn rx-btn-collection" type="button" onclick="document.querySelector('div.openseadragon-canvas div span').classList.add('ShowOCR');">
+          <button class="rx-btn rx-btn-collection" type="button" onclick="showOCR()">
  View OCR Overlay</button>
         </div>
 
         <div class="rx-info-content">
-          <button class="rx-btn rx-btn-collection" type="button" onclick="document.querySelector('div.openseadragon-canvas div span').classList.remove('ShowOCR');">
+          <button class="rx-btn rx-btn-collection" type="button" onclick="hideOCR()">
  Hide OCR Overlay</button>
         </div>
 
@@ -417,6 +417,28 @@
 {% block extra_javascript %}
 
 <!-- <script src="{% static 'js/ecds-annotator.min.js' %}"></script> -->
+
+<script type="text/javascript">
+  function showOCR() {
+    const nodeList = document.querySelectorAll("div.openseadragon-canvas div span");
+    for (let i = 0; i < nodeList.length; i++) {
+      nodeList[i].style.backgroundColor = "white";
+      nodeList[i].style.fontWeight = "bold";
+      nodeList[i].style.color = "rgb(149, 9, 83)";
+    }
+}
+</script>
+
+<script type="text/javascript">
+  function hideOCR() {
+    const nodeList2 = document.querySelectorAll("div.openseadragon-canvas div span");
+    for (let i = 0; i < nodeList2.length; i++) {
+      nodeList2[i].style.backgroundColor = "transparent";
+      nodeList2[i].style.fontWeight = "";
+      nodeList2[i].style.color = "transparent";
+    }
+}
+</script>
 
 <script type="text/javascript">
 window.onload = function() {
