fix for red em css

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -14,6 +14,10 @@
 a.nav-link {
   text-decoration: none; }
 
+em {
+  color: inherit !important;
+}
+
 .uk-button-primary {
   background-color: var(--link-color); }
 
