Add Matomo tracking

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -203,6 +203,10 @@
 
     </div>
 
+    <!-- Matomo Image Tracker-->
+    <img referrerpolicy="no-referrer-when-downgrade" src="https://matomo.ecdsdev.org/matomo.php?idsite=2&amp;rec=1" style="border:0" alt="" />
+    <!-- End Matomo -->
+
     {% block javascript %}
       <script src="{% static 'js/main.js' %}"></script>
       {% if has_ga_tracking_id %}
