--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -1,4 +1,9 @@
 @import url(./ecds-annotator.min.css);
+
+.selectize-control.plugin-clear_button .clear {
+  top: -3px !important;
+}
+
 :root {
   --link-color: $rx-color-accent-1;
   --contrast: 200%; }
@@ -1732,20 +1737,20 @@ form#search-form input[type="search"][name="q"] {
 div#search-grid {
   margin-left: 0; }
 
-div#search-grid :first-child {
+/* div#search-grid :first-child {
   padding-left: 0; }
 
 div#search-grid :first-child button#reset-filters {
-  padding-left: 30px; }
+  padding-left: 30px; } */
 
 /* Date published filter toggle
  * Adapted from https://codepen.io/adamhutch/pen/JoKEPp
  */
-div#search-grid input[type="checkbox"]#toggle-date {
+/* div#search-grid input[type="checkbox"]#toggle-date {
   font-size: 14px;
-  display: none; }
+  display: none; } */
 
-div#search-grid input[type="checkbox"]#toggle-date + label {
+/* div#search-grid input[type="checkbox"]#toggle-date + label {
   -webkit-transition: 0.3s background;
   -moz-transition: 0.3s background;
   transition: 0.3s background;
@@ -1805,7 +1810,7 @@ div#search-grid input[type="checkbox"]#toggle-date + label span {
   position: absolute;
   top: 0;
   left: 55px;
-  width: 170px; }
+  width: 170px; } */
 
 #search-filters input[type="text"]#authors-filter {
   width: 100%; }
@@ -1817,9 +1822,36 @@ div#search-grid input[type="checkbox"]#toggle-date + label span {
   overflow-y: scroll;
   overflow-x: hidden; }
 
+  /* Selectize */
+
+.selectize-control.multi .selectize-input>div {
+  background: #950953 !important;
+  border: none !important;
+}
+.selectize-dropdown .active:not(.selected) {
+  background-color: #fff7fb !important;
+}
+.noUi-connect {
+  background: #950953 !important;
+}
+[disabled] .noUi-connect {
+  background: #950953 !important;
+  opacity: 0.2;
+}
+
 /* Date slider */
+.noUi-tooltip {
+  font-size: .875rem;
+  font-family: monospace;
+  font-weight: normal;
+  padding: 0.125rem 0.25rem !important;
+  background-color: none;
+  border: none !important;
+}
+
 #search-filters .noUi-target {
-  margin: 60px 20px 10px; }
+  margin: 45px 21px 10px; 
+}
 
 /* Individual search results */
 ol#search-results {
@@ -1845,4 +1877,13 @@ ol#search-results dd.result-volume-summary {
   clip: rect(0, 0, 0, 0);
   border: 0; }
 
+.sui-item-heading {
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-family: "Helvetica Neue";
+    font-size: 13px;
+}
+
 /*# sourceMappingURL=project.css.map */
+
