--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -82,6 +82,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.13.7/css/uikit.min.css" />
     <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
     <link type="text/css" href="{% sass_src 'css/project.scss' %}" rel="stylesheet">
+    <!-- <link type="text/css" href="css/project.scss" rel="stylesheet"> -->
 
     <style>
       {{ css }}
@@ -204,6 +205,10 @@
     </div>
 
     {% block javascript %}
+      <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"></script>
       <script src="{% static 'js/main.js' %}"></script>
       {% if has_ga_tracking_id %}
         <!-- Google Analytics -->
